# CAPA

./: .gitignore  AGENT_CODEX.md  AGENT_TASKS.md  README.md  ROADMAP.md  api)  asgi_app)  pyproject.toml  requirements.txt  run.bat  run_dev.bat  tasks.ps1
backend/: README_BACKEND.md  alembic.ini  check.py  db_doctor.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_add_users_table.py  0003_update_champion_fields.py  0004_add_users_email.py  0005_add_tags_and_analyses_tables.py  0006_add_actions_updated_at.py  0007_extend_projects_fields.py  0008_harden_users_email_and_role.py  0009_add_moulding_reference_tables.py  0010_add_assembly_lines_table.py  0011_add_project_resource_join_tables.py  0012_add_metalization_reference_tables.py  0013_add_labour_costs_table.py  0014_add_component_hc_tables.py  0015_add_materials_table.py  0016_add_tool_and_mask_material_bom_tables.py  0017_add_outcome_and_assembly_cost_tables.py  0018_add_category_and_make_buy_to_materials.py  0019_make_material_price_nullable.py  0020_add_assembly_line_reference_tables.py  0021_add_action_process_components.py  0022_add_5why_and_analysis_action_link.py  0023_add_structured_observed_location_for_5why.py  0024_rebuild_5why_observed_component_join_tables.py  0025_add_champion_is_active.py  0026_set_null_on_champion_delete.py
backend/app/: main.py
backend/app/api/: __init__.py  actions.py  analyses.py  kpi.py  projects.py  tags.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: schema_guard.py  session.py
backend/app/models/: tag.py  (+12 more)
backend/scripts/: import_csv_to_sqlite.py
backend/tests/: conftest.py  test_api_endpoints.py  test_blocked_mode.py  test_champion_scoring.py  test_schema_guard.py  test_services_analyses.py  test_services_champions.py  test_services_metrics.py  test_services_settings.py  test_services_users.py  test_ui_endpoints.py
(+127 files in other folders)
