[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capa-backend"
version = "0.1.0"
description = "FastAPI backend for Action Tracking / CAPA"
readme = "README_BACKEND.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.8",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4",
  "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-q"
